--- a/src/app/ui/sidenav/sidenav.component.scss
+++ b/src/app/ui/sidenav/sidenav.component.scss
@@ -4,12 +4,12 @@
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-.sidenav-fab-container md-sidenav {
+.sidenav-fab-container mat-sidenav {
   max-width: 200px;
 }
 
 .sidenav-fab-container .mat-sidenav-content,
-.sidenav-fab-container md-sidenav {
+.sidenav-fab-container mat-sidenav {
   display: flex;
   overflow: visible;
 }
