--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -56,7 +56,7 @@
 </mat-toolbar>
 
 <mat-menu #Menu="matMenu">
-  <button mat-menu-item>
+  <button mat-menu-item routerLink="/login">
         <mat-icon>fingerprint</mat-icon>
         <span>Login</span>
   </button>
