--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -60,6 +60,10 @@
         <mat-icon>fingerprint</mat-icon>
         <span>Login</span>
   </button>
+  <button mat-menu-item routerLink="/chat">
+    <mat-icon>chat</mat-icon>
+    <span>Chat</span>
+  </button>
   <button mat-menu-item>
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
