--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent">
-  <button mat-mini-fab class="fab" (click)="sidenav.toggle()">
+  <button mat-mini-fab class="fab">
         <mat-icon>add</mat-icon>
   </button>
 
