--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="accent">
   <button mat-mini-fab class="fab">
-        <mat-icon>add</mat-icon>
+    <mat-icon>add</mat-icon>
   </button>
 
   <button mat-button [matMenuTriggerFor]="animals">Animal</button>
@@ -52,20 +52,25 @@
   </mat-menu>
 
   <span class="spacer"></span>
-  <button mat-button [matMenuTriggerFor]="Menu"><mat-icon>menu</mat-icon>Menu</button>
+  <button mat-button [matMenuTriggerFor]="Menu">
+    <mat-icon>menu</mat-icon>Menu</button>
 </mat-toolbar>
 
 <mat-menu #Menu="matMenu">
   <button mat-menu-item routerLink="/login">
-        <mat-icon>fingerprint</mat-icon>
-        <span>Login</span>
+    <mat-icon>fingerprint</mat-icon>
+    <span>Login</span>
   </button>
   <button mat-menu-item routerLink="/chat">
     <mat-icon>chat</mat-icon>
     <span>Chat</span>
   </button>
+  <button mat-menu-item routerLink="/table">
+    <mat-icon>table</mat-icon>
+    <span>Table</span>
+  </button>
   <button mat-menu-item>
-        <mat-icon>settings</mat-icon>
-        <span>Settings</span>
+    <mat-icon>settings</mat-icon>
+    <span>Settings</span>
   </button>
 </mat-menu>
