--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -69,6 +69,14 @@
     <mat-icon>table</mat-icon>
     <span>Table</span>
   </button>
+  <button mat-menu-item (click)="changeTheme()">
+    <mat-icon>map</mat-icon>
+    <span>Map</span>
+  </button>
+  <button mat-menu-item (click)="changeTheme()">
+    <mat-icon>style</mat-icon>
+    <span>Style</span>
+  </button>
   <button mat-menu-item>
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
