--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -8,7 +8,7 @@
 
 <mat-card class="card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar class="header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
     <span class="spacer"></span>
