--- a/src/theme.scss
+++ b/src/theme.scss
@@ -10,11 +10,10 @@ $custom-theme: mat-dark-theme($custom-primary, $custom-accent, $custom-warn);
 
 
 // ALTERNATIVE THEME
-
 $alt-primary: mat-palette($mat-yellow);
 $alt-accent:  mat-palette($mat-grey, 200);
 
-$alt-theme: mat-dark-theme($alt-primary, $alt-accent);
+$alt-theme: mat-light-theme($alt-primary, $alt-accent);
 
 .alternative {
     @include angular-material-theme($alt-theme);
