--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,22 @@
 <mat-toolbar color="accent">
-  <button mat-mini-fab class="fab">
-    <mat-icon>add</mat-icon>
-  </button>
+
+  <div class="top-buttons">
+    <button mat-mini-fab class="fab" (click)="add()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+
+  <div class="top-buttons">
+    <button mat-mini-fab (click)="remove(0)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </div>
+  
+  <div class="list-container">
+    <div @items class="box" (click)="remove(i)" 
+      *ngFor="let item of list; let i=index;">
+    </div>
+  </div>
 
   <button mat-button [matMenuTriggerFor]="animals">Animal</button>
 
