--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,6 @@
-<p>Login</p>
-<p>
-  {{data.name}}
-</p>
 <div>
-  <button mat-raised-button (click)="close()">Close</button>
+  <p>Login</p>
+  <div>
+    <button mat-raised-button (click)="close()">Close</button>
+  </div>
 </div>
